# hbci4java-glib

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  libtool-kill-dependency_libs.sh  meson.build
doc/: Makefile.am
doc/reference/: Makefile.am  ghbci-docs.xml
ghbci/: Makefile  Makefile.am  ghbci-0.1.pc.in  ghbci-account-private.h  ghbci-account.c  ghbci-account.h  ghbci-context-private.h  ghbci-context.c  ghbci-context.h  ghbci-statement-private.h  ghbci-statement.c  ghbci-statement.h  ghbci-util.c  ghbci-util.h  ghbci.h  marshal.list  test.py
tests/: Makefile.am  test-statement.c
